objects/Account.object
<CustomObject>
	<fields>
		<fullName>ACV_Risk__c</fullName>
		<label>ACV @ Risk</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>AC_Revenue__c</fullName>
		<formula>IF(VALUE(D_B_Annual_Revenue__c) = 0, Demandbase_Annual_Revenue__c, 
IF(D_B_Annual_Revenue__c =null, Demandbase_Annual_Revenue__c, D_B_Annual_Revenue__c))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>AC Revenue</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AC_Scoring_Path__c</fullName>
		<formula>IF (AND (ISPICKVAL( DMe_Named_Account__c , 'No'),ISPICKVAL( DMe_Account_Group__c , '')),'SMB', 
IF (AND (ISPICKVAL( DMe_Named_Account__c , 'No'),ISPICKVAL( DMe_Account_Group__c , 'SMB')),'SMB', 
IF (AND (ISPICKVAL( DMe_Named_Account__c , ''),ISPICKVAL( DMe_Account_Group__c , '')),'SMB', 
IF (AND (ISPICKVAL( DMe_Named_Account__c , ''),ISPICKVAL( DMe_Account_Group__c , 'SMB')),'SMB', 
'ENT'))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>AC Scoring Path</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AC_Update__c</fullName>
		<description>Test Description</description>
		<label>AC Update</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>ADDRESS_ID__c</fullName>
		<label>ADDRESS ID</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>ADLS_Code__c</fullName>
		<label>ADLS Code</label>
		<length>40</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_10__c</fullName>
		<label>ADM - Echosign</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_11__c</fullName>
		<label>ADM - Audience Manager</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_12__c</fullName>
		<label>ADM - Primetime</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_1_Formula__c</fullName>
		<formula>ADM_1_Old__r.FirstName + ' ' + ADM_1_Old__r.LastName</formula>
		<label>ADM - Analytics Formula</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_1_Old__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>ADM - Analytics (OLD)</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts333</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>ADM_2_Formula__c</fullName>
		<formula>ADM_2_Old__r.FirstName + ' ' + ADM_2_Old__r.LastName</formula>
		<label>ADM - Media Optimizer Formula</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_2_Old__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>ADM - Media Optimizer (OLD)</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts444</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>ADM_3_Formula__c</fullName>
		<formula>ADM_3_Old__r.FirstName + ' ' + ADM_3_Old__r.LastName</formula>
		<label>ADM - Creative Formula</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_3_Old__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>ADM - Creative (OLD)</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts555</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>ADM_9_Full_Name__c</fullName>
		<description>Neo M&amp;A - added this field to store the full name of the ADM Campaign. Due to SFDC limits, a formula field on the Contact that traverses Account then User is no longer supported. A trigger/class is planned to update this field upon create/update of the ADM - Campaign field on the Account object.</description>
		<label>ADM - Campaign Full Name</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_Account_Availability__c</fullName>
		<formula>if( ADM_1_Old__r.IsActive = false, 'Available', if(Opportunity_Detail_Open__c&gt;0,'Not Available',if(ISNULL(LastActivityDate),'Available',if(Days_Since_Last_Activity__c &gt;30,'Available','Not Available'))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>ADM Account Availability</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ADM_Assignments__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>ADM Assignments</label>
		<referenceTo>ADM_Assignments__c</referenceTo>
		<relationshipLabel>Accounts</relationshipLabel>
		<relationshipName>Accounts</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>ADM_Cleanup__c</fullName>
		<defaultValue>false</defaultValue>
		<label>ADM Cleanup</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>ADM_Customer_Detection_Flag__c</fullName>
		<label>ADM Customer Detection Flag</label>
		<picklist>
			<picklistValues>
				<fullName>Customer Detected</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Prospect Detected</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>AEDP_Subscriptions_Remaining__c</fullName>
		<description>Calculates the remaining AEDP Subscription count.</description>
		<formula>Number_of_AEDP_Contacts__c  -  AEDP_Subscriptions_Used__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>AEDP Subscriptions Remaining</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>AEDP_Subscriptions_Used__c</fullName>
		<description>Field used to track the Number of AEDP subscriptions are granted for Contacts, it is read only for all users and it updates when Contact AEDP Access field value changed.</description>
		<label>AEDP Subscriptions Used</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>AEM_GreenZone__c</fullName>
		<label>AEM</label>
		<picklist>
			<picklistValues>
				<fullName>Green</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Yellow</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Red</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>AGS_AM_2__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>This field is desired when multiple account managers assigned to an  account.</description>
		<label>AGS – AM-2</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts2</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>AGS_AM_DME2__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – AM – DME2</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accountsfy90</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>AGS_AM_Livefyre_Old__c</fullName>
		<label>ACS – AM – Livefyre Old</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AGS_AM_Livefyre__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – AM – Livefyre</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accountsfy8q</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>AGS_AM_SIGN__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – AM – SIGN</label>
		<referenceTo>User</referenceTo>
		<relationshipName>AGSSIGN</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>AGS_Industry__c</fullName>
		<label>AGS Industry</label>
		<picklist>
			<picklistValues>
				<fullName>To Be Reviewed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Canada</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Education</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Enterprise</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>FSI</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Government</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Healthcare</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Media, Entertainment, and Telco</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Retail</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Strategic</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Travel &amp; Hospitality</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>AGS_Operations_Name__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>AGS-AM Operation- Person who was identified.</description>
		<label>Credit Rep</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts1</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>AGS_Operations__c</fullName>
		<defaultValue>false</defaultValue>
		<label>SREV</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>AGS_Renewal_Specialist__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>AGS – Renewal Specialist</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts4</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>AMO_500__c</fullName>
		<defaultValue>false</defaultValue>
		<label>AMO $500M+</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>AMO_MSA_Contract_Status__c</fullName>
		<description>added per Fred Hale case 78081</description>
		<label>AMO MSA Contract Status</label>
		<picklist>
			<picklistValues>
				<fullName>Pending Adobe Legal Approval</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Submitted to Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Redline with Adobe</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Received Signed from Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Adobe Signature</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Executed</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Terminated</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Expired</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>AMO_MSA_Contract__c</fullName>
		<description>Added per Fred Hale Case 78081</description>
		<label>AMO MSA Contract #</label>
		<length>50</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>AMO_MSA_End_Date__c</fullName>
		<description>added per Fred Hale case 78081</description>
		<label>AMO MSA End Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>AMO_MSA_Executed_Date__c</fullName>
		<description>added per Fred Hale Case 78081</description>
		<label>AMO MSA Executed Date</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>AMO__c</fullName>
		<label>AMO</label>
		<picklist>
			<picklistValues>
				<fullName>Greater than $500M</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>N/A</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>APAC_SPP_Partner_Level__c</fullName>
		<label>APAC SPP Partner Level</label>
		<picklist>
			<picklistValues>
				<fullName>Premier Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Business Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Community Partner</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Community Plus</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Global Alliance</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>APEX_Partner_Segmentation__c</fullName>
		<label>APEX Partner Segmentation</label>
		<picklist>
			<picklistValues>
				<fullName>Digital Marketing SPP</fullName>
				<default>true</default>
			</picklistValues>
			<picklistValues>
				<fullName>Document &amp; Forms SPP</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Digital Publishing SPP</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Web Collaboration SPP</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Video SPP</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>APP_Partnership_OID__c</fullName>
		<label>Partner Portal Partnership OID</label>
		<length>80</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ARD_Last_Updated__c</fullName>
		<description>AM Ops to update a date when a new Account Readiness Dashboard is updated for a specific account.</description>
		<label>ARD Last Updated</label>
		<type>Date</type>
	</fields>
	<fields>
		<fullName>ATL_F__c</fullName>
		<formula>IF( ATL__c = true, 'T', 'F')</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>ATL</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ATL_Parent_Account2__c</fullName>
		<formula>if (begins (Upper((Name)),"COMCAST"),"COMCAST",
if ((Name = "UNIVERSAL STUDIOS"),"COMCAST", 
if (contains (Upper((Name)),"E! ENTERTAINMENT TELEVISION"),"COMCAST",
if (contains (Upper((Name)),"IVILLAGE.COM"),"COMCAST",
if (contains (Upper((Name)),"VEHIX"),"COMCAST",
if (contains (Upper((Name)),"GOLF CHANNEL "),"COMCAST",
if (contains (Upper((Name)),"FANDANGO"),"COMCAST",
if (contains (Upper((Name)),"UNIVERSAL CITY DEVELOPMENT PARTNERS LTD"),"COMCAST",
if (begins (Upper((Name)),"NBC"),"COMCAST",
if (contains (Upper((Name)),"Plaxo"),"COMCAST",
if (contains (Upper((Name)),"HORROR ENTERTAINMENT LLC"),"COMCAST",
if ((Name = "VERSUS"),"COMCAST", 
if ((Name = "THE COMCAST NETWORK, LLC (FKA COMCAST CN8)"),"COMCAST", 
if (contains (Upper((Name)),"DAILYCANDY"),"COMCAST",
if (contains (Upper((Name)),"CHILDRENS NETWORK LLC AKA SPROUT"),"COMCAST",
if (contains (Upper((Name)),"CREDIT AGRICOLE "),"CREDIT AGRICOLE ",
if (begins(Upper((Name)),"DELL"),"DELL",
if (contains (Upper((Name)),"DELOITTE "),"DELOITTE ",
if (contains (Upper((Name)),"HOMELAND SECURITY"),"DEPARTMENT OF HOMELAND SECURITY",
if (contains (Upper((Name)),"DHS-USCIS"),"DEPARTMENT OF HOMELAND SECURITY",
if (contains (Upper((Name)),"DHS FEMA"),"DEPARTMENT OF HOMELAND SECURITY",
if (contains (Upper((Name)),"NSW BUSINESSLINK PTY LTD"),"DEPARTMENT OF HOMELAND SECURITY",
if (contains (Upper((Name)),"DHS NPPD FPS HQ RMD CSA"),"DEPARTMENT OF HOMELAND SECURITY",
if (contains (Upper((Name)),"US CUSTOMS AND BORDER PROTECTION "),"DEPARTMENT OF HOMELAND SECURITY",
if (contains (Upper((Name)),"DEPARTMENT OF STATE"),"DEPARTMENT OF STATE",
if (contains (Upper((Name)),"DEUTSCHE BAHN"),"DEUTSCHE BAHN",
if (contains (Upper((Name)),"DEUTSCHE POST"),"DEUTSCHE POST",
if (contains (Upper((Name)),"DEUTSCHE TELEKOM"),"DEUTSCHE TELEKOM",
if (contains (Upper((Name)),"DISNEY "),"DISNEY",
if (contains (Upper((Name)),"DUN &amp; BRADSTREET "),"DUN &amp; BRADSTREET ",
"OTHER"))))))))))))))))))))))))))))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>ATL Parent Account2</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ATL_Parent_Account3__c</fullName>
		<formula>if (contains (Upper((Name)),"FEDEX"),"FEDEX",
if (begins(Upper((Name)),"FOX"),"FOX",
if ((Name = "WTVT-FOX"),"FOX", 
if ((Name = "20TH CENTURY FOX"),"FOX", 
if ((Name = "ARENT FOX LLP"),"FOX", 
if (contains (Upper((Name)),"HANOVER INSURANCE "),"HANOVER INSURANCE ",
if (contains (Upper((Name)),"HEARST"),"HEARST ",
if (contains (Upper((Name)),"HOME DEPOT"),"HOME DEPOT",
If (contains (Upper((Name)),"HSBC"),"HSBC",
if (contains (Upper((Name)),"HONGKONG AND SHANGHAI BANKING CORPORATION "),"HSBC",
if (contains (Upper((Name)),"JP MORGAN "),"JPMORGAN CHASE (JPMC)",
if (contains (Upper((Name)),"KBC GROEP NV"),"KBC",
if (contains (Upper((Name)),"INCORPORATED SCHOOL KBC"),"KBC",
if (contains (Upper((Name)),"KOHLS"),"KOHLS",
if (contains (Upper((Name)),"KOHL'S"),"KOHLS",
if (contains (Upper((Name)),"LENOVO"),"LENOVO",
if (contains (Upper((Name)),"LLOYDS "),"LLOYDS BANK",
if (contains (Upper((Name)),"MICROSOFT"),"MICROSOFT",
if ((Name = "MSN HOME PAGE &amp; PORTALS"),"MICROSOFT", 
if ((Name = "MSN MERCHANDISING"),"MICROSOFT", 
if ((Name = "LACOE"),"MICROSOFT", 
if (contains (Upper((Name)),"MORGAN STANLEY"),"MORGAN STANLEY &amp; CO",
if ((Name = "NIKE"),"NIKE INC",
if ((Name = "NIKE: INCORPORATED"),"NIKE INC",
if ((Name = "NIKE INC"),"NIKE INC",
if ((Name = "NIKE, INC."),"NIKE INC",
if ((Name = "NIKE EUROPEAN HEADQUARTERS"),"NIKE INC",
"OTHER")))))))))))))))))))))))))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>ATL Parent Account3</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ATL_Parent_Account4__c</fullName>
		<formula>if (contains (Upper((Name)),"O2 GERMANY GMBH &amp; CO. OHG"),"O2",
if (contains (Upper((Name)),"TELEFONICA O2"),"O2",
if (contains (Upper((Name)),"O2 GERMANY GMBH CO OHG"),"O2",
if (contains (Upper((Name)),"THE O2"),"O2",
if (contains (Upper((Name)),"OMNICOM"),"OMNICOM",
if (begins    (Upper((Name)),"PEARSON"),"PEARSON",
if ((Name = "REI"),"REI", 
if (contains (Upper((Name)),"RESEARCH IN MOTION"),"REI ",
if (contains (Upper((Name)),"RECREATIONAL EQUIPMENT, INC"),"REI ",
if (contains (Upper((Name)),"ROYAL BANK OF SCOTLAND"),"ROYAL BANK OF SCOTLAND",
if ((Name = "ABNAMRO NV"),"ROYAL BANK OF SCOTLAND", 
if (begins    (Upper((Name)),"ABN AMRO"),"ROYAL BANK OF SCOTLAND",
if (contains (Upper((Name)),"SCOTTRADE"),"SCOTTRADE",
If (contains (Upper((Name)),"STATE OF CALIFORNIA DEPARTMENT OF CORRECTIONS"),"STATE OF CALIFORNIA",
If (contains (Upper((Name)),"CA DEPT OF CORRECTIONS"),"STATE OF CALIFORNIA",
If (contains (Upper((Name)),"STATE OF CALIFORNIA"),"STATE OF CALIFORNIA",
If (contains (Upper((Name)),"LOS ANGELES COUNTY: DEPARTMENT OF INTERNAL SERVICES"),"STATE OF CALIFORNIA",
If (contains (Upper((Name)),"SUPERIOR COURT OF CALIFOR"),"STATE OF CALIFORNIA",
If (begins (Upper((Name)),"CA DEPT"),"STATE OF CALIFORNIA",
If (begins (Upper((Name)),"CALIFORNIA DEPARTMENT"),"STATE OF CALIFORNIA",
If (contains (Upper((Name)),"STATE COMPENSATION INSURANCE FUND"),"STATE OF CALIFORNIA",
If (contains (Upper((Name)),"STATE OF CALIFORNIA DEPARTMENT OF CORRECTIONS"),"STATE OF CALIFORNIA",
if (contains (Upper((Name)),"SYSCO "),"SYSCO FOODS",
if (contains (Upper((Name)),"THERMO FISHER"),"THERMO FISHER",
"OTHER"))))))))))))))))))))))))</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>ATL Parent Account4</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>ATL__c</fullName>
		<defaultValue>false</defaultValue>
		<description>02/28/2011 AE</description>
		<label>ATL</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Account_ADM_Owner_Text__c</fullName>
		<label>Account ADM Owner</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Account_ADM_Owner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Account ADM Owner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>AccountADMOwner</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Account_Assignment_Type__c</fullName>
		<label>Account Assignment Type</label>
		<picklist>
			<picklistValues>
				<fullName>BOB</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Tech Touch</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>New Assignments</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Other</fullName>
			</picklistValues>
			<restrictedPicklist>true</restrictedPicklist>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Account_Category__c</fullName>
		<label>Account Category</label>
		<picklist>
			<picklistValues>
				<fullName>Marketing</fullName>
				<default>true</default>
			</picklistValues>
			<picklistValues>
				<fullName>Sales</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Account_Cleansed__c</fullName>
		<defaultValue>false</defaultValue>
		<description>02/28/2011 AE</description>
		<label>Account Cleansed</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Account_Current_Q_Effective_Revenue__c</fullName>
		<description>Rollup Summary of effective PD Revenue in quarter</description>
		<label>Account Current Q Effective Revenue</label>
		<summarizedField>Spend_Forecasting__c.Effective_Net_Rev_This_Quarter__c</summarizedField>
		<summaryForeignKey>Spend_Forecasting__c.Account__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Account_Effective_Net_Rev_This_Quarter__c</fullName>
		<description>Rollup of each opportunity *X* it's margin</description>
		<inlineHelpText>Rollup of each opportunity *X* it's margin</inlineHelpText>
		<label>Account Effective Net Rev This Quarter</label>
		<summarizedField>Spend_Forecasting__c.Effective_Net_Rev_This_Quarter__c</summarizedField>
		<summaryForeignKey>Spend_Forecasting__c.Account__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Account_ID__c</fullName>
		<label>Account ID</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Account_Plan__c</fullName>
		<formula>HYPERLINK("/apex/CommonPageAction?id="&amp;Id &amp; "&amp;action=AccountPlan&amp;SObjectName=Account&amp;operationClass=AccountPageActionHandler.CreateAccountPlans", IMAGE("/resource/AccountPlan", "Account Plan"), "_self")</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Account Plan</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Account_Plan_with_VSAM__c</fullName>
		<formula>HYPERLINK("/apex/CommonPageAction?id="&amp;Id &amp; "&amp;action=AccountPlanWithVSAM&amp;SObjectName=Account&amp;operationClass=AccountPageActionHandler.CreateAccountPlans", IMAGE("/resource/AccountPlanwithVSAM", "Account Plan with VSAM"), "_self")</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Account Plan with VSAM</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Account_Team_Reassigned__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Account Team Reassigned</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Accreditation_Status__c</fullName>
		<label>Accreditation Status</label>
		<picklist>
			<picklistValues>
				<fullName>On Deck</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>In Progress</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Complete</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>No Action</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Stalled (Omniture)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Stalled (Partner)</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Acct_Effective_PD_Net_Rev_This_Quarter__c</fullName>
		<description>Rollup of Opportunity amount by Margin for each opportunity under this account marked PD</description>
		<inlineHelpText>Rollup of Opportunity amount by Margin for each opportunity under this account marked PD</inlineHelpText>
		<label>Acct PD Net Rev This Quarter</label>
		<summarizedField>Spend_Forecasting__c.Effective_Net_Rev_This_Quarter__c</summarizedField>
		<summaryFilterItems>
			<field>Spend_Forecasting__c.Opportunity_Forecast_Type__c</field>
			<operation>equals</operation>
			<value>Platform Direct</value>
		</summaryFilterItems>
		<summaryForeignKey>Spend_Forecasting__c.Account__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Acct_Effective_PS_Net_Rev_This_Quarter__c</fullName>
		<description>Rollup of PS Spend by Margin</description>
		<inlineHelpText>Rollup of PS Spend by Margin</inlineHelpText>
		<label>Acct Effective PS Net Rev This Quarter</label>
		<summarizedField>Spend_Forecasting__c.Effective_Net_Rev_This_Quarter__c</summarizedField>
		<summaryFilterItems>
			<field>Spend_Forecasting__c.Opportunity_Forecast_Type__c</field>
			<operation>equals</operation>
			<value>Platform Services</value>
		</summaryFilterItems>
		<summaryForeignKey>Spend_Forecasting__c.Account__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Acct_Effective_PTV_Net_Rev_This_Quarter__c</fullName>
		<description>Rollup of PTV Opportunity Spend vs Margin</description>
		<inlineHelpText>Rollup of PTV Opportunity Spend vs Margin</inlineHelpText>
		<label>Acct Effective PTV Net Rev This Quarter</label>
		<summarizedField>Spend_Forecasting__c.Effective_Net_Rev_This_Quarter__c</summarizedField>
		<summaryFilterItems>
			<field>Spend_Forecasting__c.Opportunity_Forecast_Type__c</field>
			<operation>equals</operation>
			<value>PTV (Adobe TV)</value>
		</summaryFilterItems>
		<summaryForeignKey>Spend_Forecasting__c.Account__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Acct_Ext_ID__c</fullName>
		<externalId>true</externalId>
		<label>Acct Ext ID</label>
		<length>40</length>
		<type>Text</type>
		<unique>true</unique>
	</fields>
	<fields>
		<fullName>Acrobat_Session__c</fullName>
		<label>Acrobat Session</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Active_CC_Contracts__c</fullName>
		<label>Active CC/Doc Cloud Contracts</label>
		<precision>5</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Activity_Comments__c</fullName>
		<inlineHelpText>Enter any comments related to the Industry Strategy and Marketing Activity</inlineHelpText>
		<label>Activity Comments</label>
		<length>32768</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Actual_Revenue_PQ_CLP__c</fullName>
		<description>Actual Revenue Previous Quarter CLP</description>
		<label>Actual Revenue PQ CLP</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Actual_Revenue_PQ_Shrink__c</fullName>
		<description>Actual Revenue Previous Quarter Shrink</description>
		<label>Actual Revenue PQ Shrink</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Actual_Revenue_PQ_TLP__c</fullName>
		<description>Actual Revenue Previous Quarter TLP</description>
		<label>Actual Revenue PQ TLP</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Actual_Revenue_PQ__c</fullName>
		<description>Actual Revenue Previous Quarter</description>
		<formula>Actual_Revenue_PQ_CLP__c + Actual_Revenue_PQ_TLP__c + Actual_Revenue_PQ_Shrink__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Actual Revenue PQ</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Ad_Cloud_PD_Revenue_Goal_Current_Qtr__c</fullName>
		<label>Ad Cloud PD Revenue Goal Current Qtr</label>
		<precision>15</precision>
		<scale>3</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Ad_Cloud_PS_Revenue_Goal_Current_Qtr__c</fullName>
		<label>Ad Cloud PS Revenue Goal Current Qtr</label>
		<precision>15</precision>
		<scale>3</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Ad_Cloud_PTV_Revenue_Goal_Current_Qtr__c</fullName>
		<description>Account_PTV_Goal_Current_Q</description>
		<label>Ad Cloud PTV Revenue Goal Current Qtr</label>
		<precision>15</precision>
		<scale>3</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Adcloud_Client_partner__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Adcloud Client partner</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts5</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Add_On__c</fullName>
		<defaultValue>false</defaultValue>
		<label>Add-On</label>
		<type>Checkbox</type>
	</fields>
	<fields>
		<fullName>Additional_CCT_Seats__c</fullName>
		<label>Additional CCT Seats</label>
		<picklist>
			<picklistValues>
				<fullName>Yes</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>No</fullName>
			</picklistValues>
		</picklist>
		<type>Picklist</type>
	</fields>
	<fields>
		<fullName>Additional_License_Count__c</fullName>
		<label>Additional License Count</label>
		<summarizedField>License_Request__c.Total_Additional_Licenses__c</summarizedField>
		<summaryFilterItems>
			<field>License_Request__c.Latest_Pending_Request__c</field>
			<operation>equals</operation>
			<value>True</value>
		</summaryFilterItems>
		<summaryForeignKey>License_Request__c.Account__c</summaryForeignKey>
		<summaryOperation>sum</summaryOperation>
		<type>Summary</type>
	</fields>
	<fields>
		<fullName>Additional_Licenses__c</fullName>
		<description>Represents the number of the latest Additional Licenses request.</description>
		<label># Additional Licenses</label>
		<precision>3</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>Adobe_Account_Manager__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Adobe Account Manager</label>
		<referenceTo>User</referenceTo>
		<relationshipName>Accounts</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Adobe_Channel_Manager__c</fullName>
		<label>Adobe Channel Manager</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Adobe_Channel_manager_EMail__c</fullName>
		<label>Adobe Channel Manager: EMail</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Adobe_DMA_Products__c</fullName>
		<label>Adobe DMA Products</label>
		<picklist>
			<picklistValues>
				<fullName>Analytics</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Target</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Scene 7 (Dynamic Media Classic)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Experience Manager</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Audience Manager</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Campaign</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Media Optimizer</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Primetime</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Social</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Launch</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Not sure or haven't decided</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Other</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Adobe_Deliverables_Marketing_Activity__c</fullName>
		<description>Used by the Affinity Program to capture current deliverables and Marketing activity</description>
		<inlineHelpText>Marketing to list Adobe plans to amplify or support the partner besides the standard kits</inlineHelpText>
		<label>Adobe Deliverables &amp; Marketing Activity</label>
		<length>5000</length>
		<type>LongTextArea</type>
	</fields>
	<fields>
		<fullName>Adobe_Partner_Manager_EMail__c</fullName>
		<label>Adobe Partner Manager: EMail</label>
		<type>Email</type>
	</fields>
	<fields>
		<fullName>Adobe_Partner_Manager__c</fullName>
		<label>Adobe Partner Manager</label>
		<length>100</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Adobe_Partner_Portal_URL__c</fullName>
		<formula>CASE(BillingCountry, 
"DE", "http://www.adobe.com/de/partners", 
"AT", "http://www.adobe.com/de/partners", 
"FR", "http://www.adobe.com/fr/partners",
"KR", "http://www.adobe.com/kr/partners",
"IT", "http://www.adobe.com/it/partners",
"ES", "http://www.adobe.com/es/partners",
"http://www.adobe.com/uk/partners")</formula>
		<label>Adobe Partner Portal URL</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>Adobe_Technologies_and_Platforms__c</fullName>
		<label>Adobe Technologies and Platforms</label>
		<picklist>
			<picklistValues>
				<fullName>Acrobat Connect™ Pro Collaboration Builder SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Acrobat® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>After Effects® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>AIR</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Audition® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Authorware®</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Bridge SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Captivate™</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>ColdFusion®</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Contribute®</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Content Server</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Document Server</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash®</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash® Player Developer SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash (SWF) / Flash Video (FLV) File Format Spec</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash Search Engine SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash Media Server</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash Remoting</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flash® Lite™</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Flex™</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Font Development Kit for OpenType® (AFDKO)</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>FrameMaker® Developer Kit</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Illustrator® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>InCopy® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>InDesign® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>InDesign® Server</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>LiveCycle® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Mobile and Devices</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>PageMaker® SDK</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Photoshop® SDK</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Adobe_products_usage__c</fullName>
		<label>Adobe products usage</label>
		<picklist>
			<picklistValues>
				<fullName>Sell commercially available products that extend Adobe product capabilities</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Offer products or services that drive the purchase of Adobe products or technologies</fullName>
			</picklistValues>
			<picklistValues>
				<fullName>Provide your own services that directly support Adobe products or technology</fullName>
			</picklistValues>
		</picklist>
		<type>MultiselectPicklist</type>
	</fields>
	<fields>
		<fullName>Affinity_Referral_Program__c</fullName>
		<defaultValue>false</defaultValue>
		<description>Created for US 00265235 - SMB Referrals Program</description>
		<label>Affinity Referral Program</label>
		<type>Checkbox</type>
	</fields>
</CustomObject>